--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "dependencies": {
     "cypress": "^13.15.0"
+  },
+
+"scripts": {
+   
+    "e2e": "cypress run --spec 'cypress/e2e/MyTest/*'"            
+   
   }
+
 }
+
+
